# rinha-compiladores-rust

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
examples/: combination.rinha  source.rinha  source.rinha.json  sum.rinha
src/: ast.rs  lib.rs  main.rs
src/compiler/: interpreter.rs
src/eval/: core.rs  eval_binary.rs  eval_call.rs  mod.rs  val.rs
tests/: mod.rs
tests/compiler/: interpreter_test.rs
tests/eval/: core.rs
